Expense get now combines with expense type
