# docs/swagger.json
@@ -9,7 +9,53 @@
     "host": "localhost:8080",
     "basePath": "/api/v1",
     "paths": {
-        "/expense/:year/:month": {
+        "/expense/{expense_type}/{year}/{month}": {
+            "get": {
+                "description": "gets expenses for a certain month and year",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "expenses"
+                ],
+                "summary": "gets expenses for a certain month and year",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "expense type",
+                        "name": "expense_type",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "current year",
+                        "name": "year",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "current month",
+                        "name": "month",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.Expense"
+                        }
+                    }
+                }
+            }
+        },
+        "/expenses/{year}/{month}": {
             "get": {
                 "description": "gets expenses for a certain month and year",
                 "consumes": [
@@ -38,32 +84,6 @@
                         "required": true
                     }
                 ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/models.Expense"
-                            }
-                        }
-                    }
-                }
-            }
-        },
-        "/expenses": {
-            "get": {
-                "description": "Get all expenses",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "expenses"
-                ],
-                "summary": "Get all expenses",
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -149,6 +169,23 @@
                     "type": "integer"
                 },
                 "expenseType": {
+                    "$ref": "#/definitions/models.ExpenseType"
+                },
+                "status": {
+                    "type": "integer"
+                }
+            }
+        },
+        "models.ExpenseType": {
+            "type": "object",
+            "properties": {
+                "createdAt": {
+                    "type": "string"
+                },
+                "splitType": {
+                    "$ref": "#/definitions/models.SplitType"
+                },
+                "typeName": {
                     "type": "string"
                 }
             }
@@ -186,6 +223,21 @@
                     "type": "number"
                 }
             }
+        },
+        "models.SplitType": {
+            "type": "string",
+            "enum": [
+                "FiftyFifty",
+                "Default",
+                "MeOnly",
+                "HerOnly"
+            ],
+            "x-enum-varnames": [
+                "FiftyFiftySplit",
+                "DefaultSplit",
+                "MeOnlySplit",
+                "HerOnlySplit"
+            ]
         }
     },
     "securityDefinitions": {
